# ffi-pinyin

./: .gitignore  Cargo.toml  README.md  build.rs  composer.json  phpbench.json  phpbench.json.dist
examples/: Bench.php  example.php
lib/: ffi_pinyin.h  libffi_pinyin.arm.dylib  libffi_pinyin.dylib
src/: Pinyin.php  lib.rs
