[package]
name = "ffi_pinyin"
version = "0.1.0"
authors = ["zhoutianliang <mfkgdyve@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[lib]
name = "ffi_pinyin"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
pinyin = "0.9.0"
