[package]
name = "ffi_pinyin"
version = "0.1.1"
authors = ["zhoutianliang <mfkgdyve@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[lib]
name = "ffi_pinyin"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
cbindgen = "0.24.3"

[dependencies]
pinyin = "0.10.0"
